--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/logo_oil.png
+
