--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hrgo_app
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.6
+version: 0.1.7
 
 environment:
   sdk: ^3.9.2
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   file_picker: ^10.3.3
   intl: ^0.20.2
+  dio: ^5.9.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
