--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hrgo_app
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.7
+version: 0.1.8
 
 environment:
   sdk: ^3.9.2
@@ -13,6 +13,9 @@ dependencies:
   intl: ^0.20.2
   dio: ^5.9.0
   flutter_secure_storage: ^9.2.4
+  path_provider: ^2.1.5
+  flutter_pdfview: ^1.4.3
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
