--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_pdfview: ^1.4.3
   share_plus: ^12.0.1
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
