--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   share_plus: ^12.0.1
   webview_flutter: ^4.13.0
   lucide_icons: ^0.257.0
+  permission_handler: ^12.0.1
+  native_pdf_view: ^4.2.0
 
 dev_dependencies:
   flutter_test:
