--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hrgo_app
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.15
+version: 0.1.16
 
 environment:
   sdk: ^3.9.2
@@ -14,18 +14,18 @@ dependencies:
   dio: ^5.9.0
   flutter_secure_storage: ^9.2.4
   path_provider: ^2.1.5
-  flutter_pdfview: ^1.4.3
   share_plus: ^12.0.1
   webview_flutter: ^4.13.0
   lucide_icons: ^0.257.0
   permission_handler: ^12.0.1
-  native_pdf_view: ^4.2.0
+  http: ^1.5.0
+  pdfx: ^2.9.2
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
